--- a/index.html
+++ b/index.html
@@ -1,12 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link rel="stylesheet" href="./1.css">
 </head>
+
 <body>
-    <h1>MY name is vishal padaswan</h1>
+
+	<!-- --------------------------------------------------------Nav bar --------------------------------------------------------------------------------- -->
+
+	<nav class="navbar" id="nav-menu">
+		<h1 class="navbar-brand">MEETME</h1>
+		<button class="navbar-toggle" onclick="toggleMenu()">
+			<span></span>
+			<span></span>
+			<span></span>
+		</button>
+		<ul class="navbar-menu" id="menu">
+			<li class="sam1"><a href="#home">Home</a></li>
+			<li class="sam1" ><a href="#about">About Me</a></li>
+			<li class="sam1"><a href="#skills">Skills</a></li>
+			<li class="sam1"><a href="#Project">Projects</a></li>
+			<li class="sam1"><a href="#contact">Contact</a></li>
+			<li class="sam1" id="resume"><a href="#">Resume <img src="./img/download.png" alt=""></a></li>
+		</ul>
+	</nav>
+
+	
+	<section id="home">
+		<h2>MY BIO</h2>
+		<div class="mainuper">
+			<div class="andar1">
+				<img id="imgoutside" src="./img/Screenshot 2023-03-08 203830.png" alt="">
+			</div>
+			<div class="andar2">
+
+			</div>
+		</div>
+		<div class="biodown">
+			<div class="biodownchild1"><img id="homeimg" src="./img/Untitled-modified-removebg-preview.png" alt="">
+			</div>
+			<div class="biodownchild2">
+				<h1>BACKEND DEVELOPER</h1>
+				<span class="welcome-line"></span>
+				<p class="paramy">Vishal is a skilled Node.js backend developer with a passion for building efficient, scalable systems
+					that power web and mobile applications. He has extensive experience designing and
+					implementing APIs, integrating with third-party services, and optimizing server performance. With a
+					deep understanding of the Node.js ecosystem and its powerful tooling, Vishal is proficient in
+					building microservices, containerizing applications with Docker, and deploying to cloud platforms
+					such as AWS and Google Cloud.</p>
+			</div>
+		</div>
+	</section>
+
+	<section id="about" class="about section">
+		<h2>ABOUT</h2>
+		<p> Vishal is a skilled backend developer with a strong foundation in computer science and extensive experience
+			building scalable and robust server-side applications. He is proficient in programming language
+			such as JavaScript and has a deep understanding of database systems such as SQL and MongoDB. <br>
+
+			With a keen eye for detail and a passion for creating efficient, optimized code, vishal is adept at
+			designing and implementing APIs, integrating with third-party services, and optimizing server performance.
+			He is also experienced in developing microservices, building serverless architectures, and
+			deploying applications to cloud platforms such as AWS and Google Cloud.</p>
+
+		<p>
+			Vishal is an excellent problem solver with a knack for troubleshooting and debugging complex systems.
+			He has a proven track record of delivering high-quality software on time and on budget, and is
+			committed to staying up-to-date with the latest industry trends and best practices. <br>
+
+			In addition to his technical expertise, Vishal is an effective communicator who is able to
+			collaborate with cross-functional teams, explain technical concepts to non-technical stakeholders, and
+			provide mentorship to junior developers. He is passionate about building scalable, reliable, and
+			secure systems that drive business success.
+
+		</p>
+	</section>
+
+	<section id="skills">
+		<h2>SKILLS</h2>
+		<p>Sed lobortis ante at diam venenatis, sed aliquet nulla lobortis. Nulla facilisi. Nam semper lorem eget quam
+			gravida.</p>
+	</section>
+
+	<section id="projects">
+		<h2>PROJECTS</h2>
+		<p>Nullam eu magna eget velit bibendum aliquet. Maecenas sit amet elit in est fringilla laoreet a nec turpis.
+		</p>
+	</section>
+
+	<section id="contact">
+		<h2>Contact</h2>
+		<p>Vivamus quis dui feugiat, molestie libero quis, maximus orci. Nulla facilisi. Aliquam euismod ligula a
+			lacinia bibendum.</p>
+	</section>
+
 </body>
+
 </html>
+<script src="./1.js"></script>
