--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="./1.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Heebo&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/6cc2dc03ef.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -22,40 +26,45 @@
 		</button>
 		<ul class="navbar-menu" id="menu">
 			<li class="sam1"><a href="#home">Home</a></li>
-			<li class="sam1" ><a href="#about">About Me</a></li>
+			<li class="sam1"><a href="#about">About Me</a></li>
 			<li class="sam1"><a href="#skills">Skills</a></li>
-			<li class="sam1"><a href="#Project">Projects</a></li>
+			<li class="sam1"><a href="#projects">Projects</a></li>
 			<li class="sam1"><a href="#contact">Contact</a></li>
 			<li class="sam1" id="resume"><a href="#">Resume <img src="./img/download.png" alt=""></a></li>
 		</ul>
 	</nav>
 
-	
+
 	<section id="home">
-		<h2>MY BIO</h2>
+
 		<div class="mainuper">
 			<div class="andar1">
-				<img id="imgoutside" src="./img/Screenshot 2023-03-08 203830.png" alt="">
+				<img id="imgoutside" src="./img/22.gif" alt="">
 			</div>
 			<div class="andar2">
-
+				<h2 class="mybiohead">About Me <i id="shyam" class="fa-sharp fa-solid fa-graduation-cap"></i></h2>
 			</div>
 		</div>
 		<div class="biodown">
 			<div class="biodownchild1"><img id="homeimg" src="./img/Untitled-modified-removebg-preview.png" alt="">
 			</div>
 			<div class="biodownchild2">
-				<h1>BACKEND DEVELOPER</h1>
+				<h1>FULL STACK DEVELOPER</h1><br><br><br>
+				<p class="mynametop">I'm Vishal Padaswan and I'm a </p><span id="append_onebyone">problem</span>
 				<span class="welcome-line"></span>
-				<p class="paramy">Vishal is a skilled Node.js backend developer with a passion for building efficient, scalable systems
+				<p class="paramy">Vishal is a skilled Node.js backend developer with a passion for building efficient,
+					scalable systems
 					that power web and mobile applications. He has extensive experience designing and
 					implementing APIs, integrating with third-party services, and optimizing server performance. With a
 					deep understanding of the Node.js ecosystem and its powerful tooling, Vishal is proficient in
 					building microservices, containerizing applications with Docker, and deploying to cloud platforms
-					such as AWS and Google Cloud.</p>
+					such as AWS and Google Cloud.
+					<a href="#contact"><button class="hire_me">Hire me</button></a>
+				</p>
+				
 			</div>
 		</div>
-	</section>
+	</section><br><br><br>
 
 	<section id="about" class="about section">
 		<h2>ABOUT</h2>
