--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 
                     <div class="skills-images reduce">
                         <img class="skills-card-img" src="https://ugeek.github.io/blog/images-blog/node.png" alt="">
+
                         <p class="lefthere"> <span class="skills-card-name"></span>  NodeJS</p>
                     </div>
 
@@ -379,7 +380,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span></span> Thank you</span>
+        <span></span> Thank you for reaching</span>
     </footer>
 
     <script src="script.js"></script>
