--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <nav class="navbar" id="nav-menu">
         <div class="max-width">
-            <div class="logo"><a href="#"><span>VISHAL PADASWAN</a></div>
+            <div class="logo"><a href="#"><span>VISHAL PADASWAN <span class="nav-link projects">.</span></a></div>
             <ul class="menu">
                 <li><a id="resume-link-2" href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -85,6 +85,7 @@
                 <div class="column left">
 
                     <div class="skills-images">
+                        <div class="skills-card">`</div>
                         <img class="skills-card-img" src="https://clipground.com/images/html5-logo-2.png" alt="">
                         <p class="lefthere"> <span class="skills-card-name"></span>   HTML</p>
                     </div>
@@ -146,7 +147,7 @@
     <!-- project section start -->
 
     <section class="project" id="projects">
-        <span class="nav-link projects">.</span>
+        
         <h2 class="title"> Projects </h2>
 
         <div class="projectall">
