--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         across multiple platforms.</p>
                 </div>
                 <div class="column left">
-                    <img class="home-img" src="./images/Screenshot 2023-03-10 173410-modified.png" alt="">
+                    <img class="home-img" src="./images/res-modified.png" alt="">
                 </div>
 
             </div>
@@ -387,25 +387,6 @@
         </div>
     </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- <p><img align="left" src="https://github-readme-stats.vercel.app/api/top-langs?username=grajoria0083&show_icons=true&locale=en&layout=compact" alt="grajoria0083" /></p> -->
-
-    <!-- <p>&nbsp;<img align="center" src="https://github-readme-stats.vercel.app/api?username=grajoria0083&show_icons=true&locale=en" alt="grajoria0083" /></p> -->
-
-    <!-- <p><img align="center" src="https://github-readme-streak-stats.herokuapp.com/?user=grajoria0083&" alt="grajoria0083" /></p> -->
 
 
 
