--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
             <div class="project-card card1">
 
-                <img src="./images/adoraama.png" alt="">
+                <img class="shyamhere" src="./images/adoraama.png" alt="">
                 <p class="projectDetails"><span class="project-description">.</span> This is an Electronic Gadget
                     website
                     which is clone of Adorama. The
@@ -278,16 +278,16 @@
         <h2 class="title">Github-statics <br><br>
             <hr>
         </h2>
-        <p style="text-align: center;">
+        <p style="text-align: center; ">
 
             <img id="github-stats-card"
                 src="https://github-readme-stats.vercel.app/api?username=vishalpadaswan3&show_icons=true&locale=en"
-                alt="vishalpadaswan3" />
+                alt="vishalpadaswan3" /> <br>
             <img id="github-streak-stats" src="https://github-readme-streak-stats.herokuapp.com?user=vishalpadaswan3"
-                alt="vishalpadaswan3" />
+                alt="vishalpadaswan3" /> <br>
             <img id="github-top-langs"
                 src="https://github-readme-stats.vercel.app/api/top-langs?username=vishalpadaswan3&show_icons=true&locale=en&layout=compact"
-                alt="vishalpadaswan3" />
+                alt="vishalpadaswan3" /> <br>
 
 
         </p>
