--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><a id="resume-link-2" href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
-                <li><a href="#projects" class="menu-btn">Projects <span class="nav-link projects">'</span></a></li>
+                <li><a href="#projects" class="menu-btn">Projects <span class="nav-link projects" id="shubhamraut">'</span></a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
                 <li class="nav-link resume" id="resume-button-1"> <a id="resume-link-1"
                         href="./Vishal_Padaswan_Resume.pdf"
@@ -193,7 +193,7 @@
                 <a href="https://github.com/vishalpadaswan3/slick-art-7157" target="_blank"><button
                         class="project-github-link">Repo</button></a> <a href=""><button
                         class="project_name_down project-title">MYKAA</button></a> <a
-                    href="https://dynamic-rabanadas-5f15e3.netlify.app/" target="_blank"><button
+                    href="https://resonant-marshmallow-41a182.netlify.app/" target="_blank"><button
                         class="project-deployed-link">Go Live</button></a>
 
 
