--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
                         <li><a href="https://www.linkedin.com/in/vishal-padaswan-478aa2230/" target="_blank"><span
                               class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
                         <li><a href="#contact"><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
-                        <li><a href="#contact"><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
+                        <li><a href="https://github.com/vishalpadaswan3"><span class="ico-circle"><i class="bi bi-github"></i></span></a></li>
                       </ul>
                     </div>
                   </div>
