Done the portfolio

--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
                 <div class="btnforproj">
                   <a href="https://github.com/vishalpadaswan3/SmileSlot_Dentist"
                     target="_blank"><button>Github</button></a>
-                  <a href="https://smileslot.netlify.app/https://smileslot.netlify.app/" target="_blank"><button>Go
+                  <a href="https://smileslot.netlify.app/" target="_blank"><button>Go
                       Live</button></a>
                 </div>
               </div>
